--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -1,5 +1,18 @@
-# Definitions of tags to detect
-# Standalone tag definitions
+# # Definitions of tags to detect
+#
+# ## General remarks
+#
+# - All length in meters
+# - Ellipsis (...) signifies that the previous element can be repeated multiple times.
+#
+# ## Standalone tag definitions
+# ### Syntax
+#
+# standalone_tags:
+#   [
+#     {id: ID, size: SIZE},
+#     ...
+#   ]
 standalone_tags:
   [
     {id: 9, size: 0.075},
@@ -8,34 +21,38 @@ standalone_tags:
     {id: 13, size: 0.18},
     {id: 2, size: 0.18}
   ]
-# Tag bundle definitions
+# ## Tag bundle definitions
+# ### Remarks
+#
+# - name field is optional
+# - x, y, z have default values of 0 thus they are optional
+# - qw has default value of 1 and qx, qy, qz have default values of 0 thus they are optional
+#
+# ### Syntax
+#
+# tag_bundles:
+#   [
+#     {
+#       name: 'CUSTOM_BUNDLE_NAME',
+#       layout:
+#         [
+#           {id: ID, size: SIZE, x: X_POS, y: Y_POS, z: Z_POS, qw: QUAT_W_VAL, qx: QUAT_X_VAL, qy: QUAT_Y_VAL, qz: QUAT_Z_VAL},
+#           ...
+#         ]
+#     },
+#     ...
+#   ]
 tag_bundles:
   [
-    # Bundle 1
     {
-      name: 'landing_bundle',
+      name: 'landing_test_bundle',
       layout:
         [
-          # Format:
-          # {id: <int>, size: <double>, x: <double>, y: <double>, z: <double>,
-          #  qw: <double>, qx: <double>, qy: <double< qz: <double>}
-          {id: 9, size: 0.075, x: 0., y: 0., z: 0.},
-          {id: 0, size: 0.18, x: -0.3025, y: -0.3025, z: 0},
-          {id: 4, size: 0.18, x: 0.3025, y: -0.3025, z: 0},
-          {id: 13, size: 0.18, x: 0.3025, y: 0.3025, z: 0},
-          {id: 2, size: 0.18, x: -0.3025, y: 0.3025, z: 0}
-        ]
-    },
-    # Bundle 2
-    {
-      # name: 'landing_bundle',
-      layout:
-        [
-          {id: 9, size: 0.075, x: 0., y: 0., z: 0.},
-          {id: 0, size: 0.18, x: -0.3025, y: -0.3025, z: 0},
-          {id: 4, size: 0.18, x: 0.3025, y: -0.3025, z: 0},
-          {id: 13, size: 0.18, x: 0.3025, y: 0.3025, z: 0},
-          {id: 2, size: 0.18, x: -0.3025, y: 0.3025, z: 0}
+          {id: 9,  size: 0.1},
+          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
+          {id: 4,  size: 0.1, x: 0.05625,  y: -0.1125},
+          {id: 13, size: 0.1, x: 0.05625,  y: 0.1125},
+          {id: 2,  size: 0.1, x: -0.05625, y: 0.1125}
         ]
     }
   ]
