--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -48,10 +48,24 @@ tag_bundles:
       layout:
         [
           {id: 9,  size: 0.1},
-          {id: 2,  size: 0.22, x: -0.3043, y: 0.3144},
-          {id: 13, size: 0.22, x: 0.3210,  y: 0.3035},
-          {id: 0,  size: 0.22, x: -0.3169, y: -0.3124},
-          {id: 4,  size: 0.22, x: 0.3088,  y: -0.3234}
+          {id: 2,  size: 0.1, x: -0.05625, y:  0.1125},
+          {id: 13, size: 0.1, x:  0.05625, y:  0.1125},
+          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
+          {id: 4,  size: 0.1, x:  0.05625, y: -0.1125}
         ]
     }
   ]
+#tag_bundles:
+#  [
+#    {
+#      name: 'charging_pad',
+#      layout:
+#        [
+#          {id: 9,  size: 0.1},
+#          {id: 2,  size: 0.22, x: -0.3043, y: 0.3144},
+#          {id: 13, size: 0.22, x: 0.3210,  y: 0.3035},
+#          {id: 0,  size: 0.22, x: -0.3169, y: -0.3124},
+#          {id: 4,  size: 0.22, x: 0.3088,  y: -0.3234}
+#        ]
+#    }
+#  ]
