--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -46,31 +46,31 @@ standalone_tags:
 #     },
 #     ...
 #   ]
-tag_bundles:
-  [
-    {
-      name: 'charging_pad',
-      layout:
-         [
-          {id: 9,  size: 0.1},
-          {id: 2,  size: 0.22, x: -0.3137, y: 0.3075, z: 0.0055},
-          {id: 13, size: 0.22, x: 0.3132, y: 0.3183, z: -0.0071},
-          {id: 0,  size: 0.22, x: -0.3086, y: -0.3185, z: 0.0002},
-          {id: 4,  size: 0.22, x: 0.3191, y: -0.3109, z: -0.0099}
-         ]
-    }
-  ]
 #tag_bundles:
 #  [
 #    {
 #      name: 'charging_pad',
 #      layout:
-#        [
+#         [
 #          {id: 9,  size: 0.1},
-#          {id: 2,  size: 0.1, x: -0.05625, y:  0.1125},
-#          {id: 13, size: 0.1, x:  0.05625, y:  0.1125},
-#          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
-#          {id: 4,  size: 0.1, x:  0.05625, y: -0.1125}
-#        ]
+#          {id: 2,  size: 0.22, x: -0.3137, y: 0.3075, z: 0.0055},
+#          {id: 13, size: 0.22, x: 0.3132, y: 0.3183, z: -0.0071},
+#          {id: 0,  size: 0.22, x: -0.3086, y: -0.3185, z: 0.0002},
+#          {id: 4,  size: 0.22, x: 0.3191, y: -0.3109, z: -0.0099}
+#         ]
 #    }
 #  ]
+tag_bundles:
+  [
+    {
+      name: 'charging_pad',
+      layout:
+        [
+          {id: 9,  size: 0.1},
+          {id: 2,  size: 0.1, x: -0.05625, y:  0.1125},
+          {id: 13, size: 0.1, x:  0.05625, y:  0.1125},
+          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
+          {id: 4,  size: 0.1, x:  0.05625, y: -0.1125}
+        ]
+    }
+  ]
