--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -19,11 +19,10 @@
 #   ]
 standalone_tags:
   [
-#    {id: 9, size: 0.1},
-#    {id: 2, size: 0.22},
-#    {id: 13, size: 0.22},
-#    {id: 0, size: 0.22},
-#    {id: 4, size: 0.22}
+        {id: 11, size: 0.15},
+        {id: 5, size: 0.15},
+        {id: 16, size: 0.15},
+        {id: 25, size: 0.48},
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -46,20 +45,6 @@ standalone_tags:
 #     },
 #     ...
 #   ]
-tag_bundles:
-  [
-    {
-      name: 'charging_pad',
-      layout:
-        [
-          {id: 9,  size: 0.1},
-          {id: 2,  size: 0.1, x: -0.05625, y:  0.1125},
-          {id: 13, size: 0.1, x:  0.05625, y:  0.1125},
-          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
-          {id: 4,  size: 0.1, x:  0.05625, y: -0.1125}
-        ]
-    }
-  ]
 #tag_bundles:
 #  [
 #    {
@@ -67,10 +52,24 @@ tag_bundles:
 #      layout:
 #        [
 #          {id: 9,  size: 0.1},
-#          {id: 2,  size: 0.22, x: -0.3143, y: 0.3135},
-#          {id: 13, size: 0.22, x: 0.3130, y: 0.3096},
-#          {id: 0,  size: 0.22, x: -0.3209, y: -0.3136},
-#          {id: 4,  size: 0.22, x: 0.3072, y: -0.3184}
+#          {id: 2,  size: 0.1, x: -0.05625, y:  0.1125},
+#          {id: 13, size: 0.1, x:  0.05625, y:  0.1125},
+#          {id: 0,  size: 0.1, x: -0.05625, y: -0.1125},
+#          {id: 4,  size: 0.1, x:  0.05625, y: -0.1125}
 #        ]
 #    }
 #  ]
+tag_bundles:
+ [
+#   {
+#     name: 'charging_pad',
+#     layout:
+#       [
+#         {id: 9, size: 0.15},
+#         {id: 11, size: 0.15, x: 0.0047, y: 0.5709, z: -0.0009, qw: 0.9987, qx: 0.0506, qy: -0.0057, qz: -0.0005},
+#         {id: 5, size: 0.15, x: -0.2904, y: 0.5747, z: 0.0030, qw: 0.9998, qx: 0.0061, qy: 0.0171, qz: -0.0054},
+#         {id: 16, size: 0.15, x: 0.2830, y: 0.5703, z: -0.0179, qw: 1.0000, qx: -0.0031, qy: 0.0036, qz: -0.0052},
+#         {id: 25, size: 0.48, x: -0.0007, y: 0.9912, z: -0.0122, qw: 0.7085, qx: 0.0093, qy: 0.0014, qz: 0.7056}
+#       ]
+#   }
+]
