new pad calibration

--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -19,10 +19,11 @@
 #   ]
 standalone_tags:
   [
-        {id: 11, size: 0.15},
-        {id: 5, size: 0.15},
-        {id: 16, size: 0.15},
-        {id: 25, size: 0.48},
+       # {id: 10, size: 0.15},
+       # {id: 5, size: 0.15},
+       # {id: 11, size: 0.15},
+       # {id: 16, size: 0.15},
+       # {id: 25, size: 0.48}
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -60,16 +61,15 @@ standalone_tags:
 #    }
 #  ]
 tag_bundles:
- [
-#   {
-#     name: 'charging_pad',
-#     layout:
-#       [
-#         {id: 9, size: 0.15},
-#         {id: 11, size: 0.15, x: 0.0047, y: 0.5709, z: -0.0009, qw: 0.9987, qx: 0.0506, qy: -0.0057, qz: -0.0005},
-#         {id: 5, size: 0.15, x: -0.2904, y: 0.5747, z: 0.0030, qw: 0.9998, qx: 0.0061, qy: 0.0171, qz: -0.0054},
-#         {id: 16, size: 0.15, x: 0.2830, y: 0.5703, z: -0.0179, qw: 1.0000, qx: -0.0031, qy: 0.0036, qz: -0.0052},
-#         {id: 25, size: 0.48, x: -0.0007, y: 0.9912, z: -0.0122, qw: 0.7085, qx: 0.0093, qy: 0.0014, qz: 0.7056}
-#       ]
-#   }
-]
+  [
+    {
+      name: 'charging_pad',
+      layout:
+        [
+          {id: 5, size: 0.15, x: -0.2541, y: 0.4854, z: 0.0, qw: 1.0000, qx: -0.0030, qy: 0.0007, qz: -0.0004},
+          {id: 11, size: 0.15, x: 0.0421, y: 0.4854, z: 0.0, qw: 1.0000, qx: -0.0044, qy: -0.0026, qz: 0.0033},
+          {id: 16, size: 0.15, x: 0.3211, y: 0.4854, z: 0.0, qw: 1.0000, qx: -0.0011, qy: -0.0015, qz: -0.0004},
+          {id: 25, size: 0.48, x: 0.0336, y: 0.9046, z: 0.0, qw: 0.7052, qx: -0.0083, qy: -0.0071, qz: 0.7089}
+        ]
+    }
+  ]
