--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>apriltags2_ros</name>
-  <version>0.0.1</version>
+  <version>1.0.0</version>
   <description>A ROS wrapper of the AprilTags 2 algorithm</description>
 
   <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
-  <author>Danylo Malyuta</author>
+  <author email="danylo.malyuta@gmail.com">Danylo Malyuta</author>
 
-  <license>MIT</license>
-
-  <url type="website">https://april.eecs.umich.edu/software/apriltag.html</url>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -37,5 +35,4 @@
   <run_depend>cv_bridge</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>libopencv-dev</run_depend>
-  
 </package>
