Removed misc/ directory (useless) Verified that single image detector works

--- a/apriltags2_ros/config/tags.yaml
+++ b/apriltags2_ros/config/tags.yaml
@@ -43,4 +43,15 @@ standalone_tags:
 #   ]
 tag_bundles:
   [
+    {
+      name: 'my_bundle',
+      layout:
+        [
+          {id: 0, size: 0.05, x: 0.0000, y: 0.0000, z: 0.0000, qw: 1.0000, qx: 0.0000, qy: 0.0000, qz: 0.0000},
+          {id: 2, size: 0.05, x: 0.0545, y: 0.0583, z: -0.0013, qw: 1.0000, qx: -0.0085, qy: -0.0044, qz: 0.0005},
+          {id: 1, size: 0.05, x: -0.0578, y: 0.0578, z: -0.0005, qw: 0.9998, qx: -0.0136, qy: -0.0149, qz: -0.0020},
+          {id: 3, size: 0.05, x: -0.0583, y: -0.0545, z: -0.0020, qw: 1.0000, qx: 0.0090, qy: 0.0008, qz: -0.0011},
+          {id: 4, size: 0.05, x: 0.0542, y: -0.0542, z: 0.0004, qw: 0.9999, qx: 0.0097, qy: -0.0093, qz: 0.0016}
+        ]
+    }
   ]
