--- a/apriltags2/package.xml
+++ b/apriltags2/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <name>apriltags2</name>
-  <version>1.0.0</version>
+  <version>0.9.8</version>
   <description>
-    A catkin version of the original C code for AprilTags 2 algorithm
+    A catkinized version of the exact C code for AprilTags 2 algorithm
     (version 2016-12-01 (0.9.8))
   </description>
 
   <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
+  
   <author email="danylo.malyuta@gmail.com">Danylo Malyuta</author>
 
   <license>BSD</license>
