--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -36,6 +36,7 @@
   <build_depend>eigen</build_depend>
   <build_depend>libopencv-dev</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>opencv_apps</build_depend>
   
   <run_depend>tf</run_depend>
   <run_depend>apriltags2</run_depend>
@@ -48,4 +49,5 @@
   <run_depend>cv_bridge</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>libopencv-dev</run_depend>
+  <run_depend>opencv_apps</run_depend>
 </package>
