--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -37,7 +37,9 @@
   <build_depend>libopencv-dev</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>opencv_apps</build_depend>
-  
+  <build_depend>apriltags2_msgs</build_depend>
+
+
   <run_depend>tf</run_depend>
   <run_depend>apriltags2</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -50,4 +52,5 @@
   <run_depend>eigen</run_depend>
   <run_depend>libopencv-dev</run_depend>
   <run_depend>opencv_apps</run_depend>
+  <run_depend>apriltags2_msgs</run_depend>
 </package>
