--- a/apriltags2_ros/CMakeLists.txt
+++ b/apriltags2_ros/CMakeLists.txt
@@ -43,7 +43,7 @@ endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES arm)
 
 catkin_package(
   INCLUDE_DIRS include
-  CATKIN_DEPENDS apriltags2 geometry_msgs image_transport roscpp sensor_msgs std_msgs message_runtime cv_bridge tf apriltags2_msgs
+  CATKIN_DEPENDS apriltags2 apriltags2_msgs geometry_msgs image_transport roscpp sensor_msgs std_msgs message_runtime cv_bridge tf
   DEPENDS Eigen OpenCV
 )
 
@@ -65,24 +65,28 @@ target_link_libraries(common
 )
 
 add_library(continuous_detector src/continuous_detector.cpp)
+add_dependencies(continuous_detector ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(continuous_detector
   common
   ${catkin_LIBRARIES}
 )
 
 add_library(continuous_pose_detector src/continuous_pose_detector.cpp)
+add_dependencies(continuous_pose_detector ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(continuous_pose_detector
   common
   ${catkin_LIBRARIES}
 )
 
 add_executable(continuous_pose_detector_node src/continuous_pose_detector_node.cpp)
+add_dependencies(continuous_pose_detector_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(continuous_pose_detector_node
   continuous_pose_detector
   ${catkin_LIBRARIES}
 )
 
 add_executable(continuous_detector_node src/continuous_detector_node.cpp)
+add_dependencies(continuous_detector_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(continuous_detector_node
   continuous_detector
   ${catkin_LIBRARIES}
