--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -27,6 +27,7 @@
   <build_depend>apriltags2</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>image_geometry</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
@@ -41,6 +42,7 @@
   <run_depend>apriltags2</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>image_transport</run_depend>
+  <run_depend>image_geometry</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
