--- a/apriltags2_ros/config/tags_mania.yaml
+++ b/apriltags2_ros/config/tags_mania.yaml
@@ -19,7 +19,7 @@
 #   ]
 standalone_tags:
   [
-    {id: 2, size: 0.7, name: 'tag_2'}
+    {id: 2, size: 0.7, name: 'big_tag'}
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -42,25 +42,26 @@ standalone_tags:
 #     },
 #     ...
 #   ]
+
 tag_bundles:
   [
     {
-      name: 'tag_mania'
+      name: 'tag_mania',
       layout:
         [
-          {id: 0,  size: 0.075,  x:  0.0  , y:  0.175, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 1,  size: 0.075,  x: -0.329, y:  0.04 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 3,  size: 0.075,  x:  0.165, y: -0.10 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 4,  size: 0.075,  x:  0.0  , y:  0.0  , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 5,  size: 0.075,  x: -0.135, y: -0.10 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 6,  size: 0.075,  x:  0.348, y:  0.04 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 7,  size: 0.0643, x: -0.348, y: -0.12 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 0,  size: 0.075,  x:  0.0,   y:  0.175, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 1,  size: 0.075,  x: -0.329, y:  0.04,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 3,  size: 0.075,  x:  0.165, y: -0.10,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 4,  size: 0.075,  x:  0.0,   y:  0.0,   z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 5,  size: 0.075,  x: -0.135, y: -0.10,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 6,  size: 0.075,  x:  0.348, y:  0.04,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 7,  size: 0.0643, x: -0.348, y: -0.12,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
           {id: 8,  size: 0.0643, x: -0.158, y:  0.198, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 9,  size: 0.0643, x:  0.14 , y:  0.04 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 9,  size: 0.0643, x:  0.14,  y:  0.04,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
           {id: 10, size: 0.0643, x:  0.357, y:  0.198, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 11, size: 0.0643, x: -0.158, y:  0.04 , z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 11, size: 0.0643, x: -0.158, y:  0.04,  z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
           {id: 12, size: 0.0643, x:  0.357, y: -0.123, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
-          {id: 13, size: 0.0643, x:  0.14 , y:  0.198, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
+          {id: 13, size: 0.0643, x:  0.14,  y:  0.198, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707},
           {id: 14, size: 0.0643, x: -0.348, y:  0.198, z: 0.0, qw: -0.707, qx: 0.0, qy: 0.0, qz: 0.707}
         ]
     }
