Add jetson flags and experimental changes

--- a/apriltags2_ros/CMakeLists.txt
+++ b/apriltags2_ros/CMakeLists.txt
@@ -12,9 +12,11 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   cv_bridge
   tf
+  tf2_ros
   cmake_modules
   nodelet
   pluginlib
+  robostate_comm_msgs
 )
 
 find_package(Eigen3 REQUIRED)
@@ -47,6 +49,11 @@ if(${CMAKE_SYSTEM_PROCESSOR} MATCHES arm)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a -mcpu=cortex-a9 -mfpu=neon -mtune=cortex-a9 -mvectorize-with-neon-quad -ffast-math ")
 endif(${CMAKE_SYSTEM_PROCESSOR} MATCHES arm)
 
+if(JETSON_CROSS_COMPILE)
+     set(C11_COMP_FLAGS "-W -pipe -Ofast -mcpu=cortex-a57 -std=c++11")
+     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C11_COMP_FLAGS}")
+endif()
+
 add_message_files(
   FILES
   AprilTagDetectionArray.msg
@@ -67,7 +74,7 @@ generate_messages(
 
 catkin_package(
   INCLUDE_DIRS include
-  CATKIN_DEPENDS apriltags2 geometry_msgs image_transport roscpp sensor_msgs std_msgs message_runtime cv_bridge tf nodelet pluginlib
+  CATKIN_DEPENDS apriltags2 geometry_msgs image_transport roscpp sensor_msgs std_msgs message_runtime cv_bridge tf nodelet pluginlib robostate_comm_msgs
   DEPENDS Eigen OpenCV
 )
 
@@ -82,7 +89,7 @@ include_directories(include
 )
 
 add_library(common src/common_functions.cpp)
-add_dependencies(common ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(common ${PROJECT_NAME}_generate_messages_cpp robostate_comm_msgs_generate_messages_cpp)
 target_link_libraries(common
   ${catkin_LIBRARIES}
   ${Eigen_LIBRARIES}
