--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -39,6 +39,7 @@
   <build_depend>eigen</build_depend>
   <build_depend>libopencv-dev</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>libyaml-cpp-dev</build_depend>
   
   <run_depend>tf</run_depend>
   <run_depend>apriltags2</run_depend>
@@ -54,6 +55,7 @@
   <run_depend>pluginlib</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>libopencv-dev</run_depend>
+  <run_depend>libyaml-cpp-dev</run_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
