--- a/apriltags2_ros/CMakeLists.txt
+++ b/apriltags2_ros/CMakeLists.txt
@@ -127,3 +127,7 @@ install(TARGETS
   ${PROJECT_NAME}_single_image_client_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+install(FILES nodelet_plugins.xml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
