--- a/apriltags2_ros/package.xml
+++ b/apriltags2_ros/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <name>apriltags2_ros</name>
-  <version>1.0.0</version>
+  <version>2.0.0</version>
   <description>
-    A ROS wrapper of the AprilTags 2 visual fiducial detection
-    algorithm. Provides full access to the core AprilTags 2 algorithm's
+    A ROS wrapper of the AprilTags 3 visual fiducial detection
+    algorithm. Provides full access to the core AprilTags 3 algorithm's
     customizations and makes the tag detection image and detected tags' poses
-    available over ROS topics (including tf). The core AprilTags 2 algorithm is
+    available over ROS topics (including tf). The core AprilTags 3 algorithm is
     extended to allow the detection of tag bundles and a bundle calibration
     script is provided (bundle detection is more accurate than single tag
     detection). Continuous (camera image stream) and single image detector nodes
@@ -14,7 +14,9 @@
   </description>
 
   <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
-  <author email="danylo.malyuta@gmail.com">Danylo Malyuta</author>
+  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
+
+  <author>Danylo Malyuta</author>
 
   <license>BSD</license>
 
@@ -24,7 +26,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>apriltags2</build_depend>
+  <build_depend>apriltag</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>image_geometry</build_depend>
@@ -41,7 +43,7 @@
   <build_depend>cmake_modules</build_depend>
   
   <run_depend>tf</run_depend>
-  <run_depend>apriltags2</run_depend>
+  <run_depend>apriltag</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>image_geometry</run_depend>
