--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,19 @@
 # For troubleshooting, see readme (https://github.com/ros-industrial/industrial_ci/blob/master/README.rst)
 
 language: generic # optional, just removes the language badge
-
 services:
   - docker
-
 cache:
   directories:
     - $HOME/.ccache
-
 git:
   quiet: true # optional, silences the cloning of the target repository
-
 env:
-  global: # global settings for all jobs
-    - ROS_REPO=ros
+  global:
     - CCACHE_DIR=$HOME/.ccache # enables C/C++ caching in industrial_ci
   matrix: # each line is a job
-    - ROS_DISTRO="kinetic"
     - ROS_DISTRO="melodic"
     - ROS_DISTRO="noetic"
-
-# clone and run industrial_ci
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci
 script:
